# TON-DEX-TegroFinance-Web-Backend

./: .env.dist  .gitignore  Dockerfile  database.db-journal  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py
src/api/v1/: __init__.py
src/api/v1/account/: account.py
src/api/v1/auth/: __init__.py  auth.py
src/api/v1/dex/: __init__.py  assets.py  liquidity.py  pools.py  schemas.py  swap.py
src/api/v1/ton/: __init__.py  schemas.py  token.py  wallets.py
src/auth/: jwt.py  models.py  ton_proof.py
src/database/: __init__.py  database.py
src/database/dal/: account_dal.py  asset_dal.py  pool_dal.py  transaction_dal.py
src/database/models/: __init__.py  account.py  base.py  dex.py  transaction.py
src/dex/: data_manager.py  exceptions.py  http_api.py  liquidity.py  pool.py  swap.py  utils.py
src/dex/models/: __init__.py  asset.py  check_transaction.py  liquidity.py  lp_account.py  pool.py  swap.py  transaction.py
src/dex/ston_fi_contracts/: router.py  router_factory.py  ston_constants.py
src/middlewares/: __init__.py  auth_middleware.py
src/task_scheduler/: __init__.py  task_scheduler.py
src/ton/: schemas.py  ton_api.py  tonapi_client_factory.py  utils.py  wallet.py  wallets_codes.py
src/utils/: address.py  logger.py
